Closed
Bug 1662332
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::dom::SessionHistoryEntry::HasDynamicallyAddedChild]
Categories
(Core :: DOM: Navigation, defect, P2)
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | fixed |
People
(Reporter: neha, Assigned: smaug)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Browser crash while browsing with Fission and session history in parent enabled.
Crash report: https://crash-stats.mozilla.org/report/index/312d5dd2-7afc-4926-b940-003170200901
Top 10 frames of crashing thread:
0 XUL mozilla::dom::SessionHistoryEntry::HasDynamicallyAddedChild docshell/shistory/SessionHistoryEntry.cpp:893
1 XUL NS_InvokeByIndex
2 XUL XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1141
3 XUL XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:946
4 @0x20d284387eca
5 @0x129aeebd7
6 @0x20d284338e32
7 @0x1436c2d4f
8 @0x20d284338e32
9 @0x13492e2bf
| Assignee | ||
Comment 1•5 years ago
|
||
Aha, nsSHEntry::HasDynamicallyAddedChild deals with nulls, SessionHistoryEntry::HasDynamicallyAddedChild doesn't.
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → bugs
| Assignee | ||
Comment 2•5 years ago
|
||
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0c29583ca111
the child list of a session history entry may contain null entries, r=peterv
Comment 4•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Updated•5 years ago
|
status-firefox80:
--- → unaffected
status-firefox81:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•