Bug 1662332 - the child list of a session history entry may contain null entries, r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D88966